test index.html now references new file names!

--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Highlight</title>
-<link rel="stylesheet" href="./../highlight.css">
+<title>Accent test</title>
+<link rel="stylesheet" href="./../accent.css">
 </head>
 <body>
 <pre>
@@ -47,12 +47,12 @@
 
 	test();
 </code>
-<script src="./../highlight.js"></script>
+<script src="./../accent.js"></script>
 <script>
 
 'use strict';
 
-highlight('code', 'javascript');
+accent('code', 'javascript');
 
 </script>
 </body>
