--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <code class="code">
 		
 	/**
-	 *	Accent.js - v0.1
+	 *	Accent.js - javascript test
 	 **/
 
 	var me = {
@@ -18,6 +18,7 @@
 		'age': 21
 	};
 
+	// person constructor
 	function Person(fname, sname, age) {
 		this.firstname = fname;
 		this.surname = sname;
