added stonger font weight on declarations

--- a/test/index.html
+++ b/test/index.html
@@ -48,6 +48,18 @@
 
 	test();
 </code>
+<code class="code">
+	var x = null,
+	y = undefined,
+	z = (x == y) ? false : true,
+
+	array = [],
+	object = {};
+
+	document.getElementById("test");
+	document.getElementsByClassName("multiple");
+	document.getElementsByTagName("div");
+</code>
 <script src="./../accent.js"></script>
 <script>
 
