parser now escapes html open/close tags

--- a/test/index.html
+++ b/test/index.html
@@ -85,20 +85,20 @@
 
 		'javascript': {
 
-			
-			'amp': [/&/g, '&amp;'],
+			// escape html characters ... not perfect yet
+			'EscapeHTML': [
+				/[<>]/g,
+				function(match) {
+					var escaped = '';
 
-			'htmlOpenTag': [/</g, '&lt;'],
+					if(match === '<') escaped = '&lt;'
+					else escaped = '&gt;'
 
-			'htmlCloseTag': [/>/g, '&gt;'],
-
-			// regular expression literals: fix...
-			'regExp': [
-				/(\/.+?\/(g|i|m|y){0,1})/g, 
-				'<span class=js-regexp>$1</span>'
+					return escaped;
+				}
 			],
 
-			// double qouted trhing
+			// double qouted string
 			'doubleStr': [
 				/"(.*?)"/g, 
 				'<span class=js-double-str>"$1"</span>'
@@ -112,26 +112,34 @@
 
 			// common language operators such as conditionals and loops
 			'operation': [
-				/\b(if|else|continue|switch|case|default|break|return|for|try|catch)(?=[^\w])/g, 
-				'<span class=js-operation><span class=js-keyword>$1</span></span>'
+				/([^\w])\b(if|else|continue|switch|case|default|break|return|for|try|catch|throw)(?=[^\w])/g, 
+				'$1<span class=js-operation><span class=js-keyword>$2</span></span>'
 			],
 
 			// variable assignment keywords
 			'declaration': [
-				/([^.]\bfunction|var|const|in|new|this|prototype)(?=[^\w])/g, 
-				'<span class=js-declaration><span class=js-keyword>$1</span></span>'
+				/([^\w])([^.]\W\bfunction|var|const|in|new|this|prototype)(?=[^\w])/g, 
+				'$1<span class=js-declaration><span class=js-keyword>$2</span></span>'
 			],
 
-			// frequently used document methods
+			// frequently used methods
 			'specials': [
 				/(\.\bgetElementById|getElementsBy(ClassName|TagName|Name)|(type|instance)of)/g, 
 				'<span class=js-special>$1</span>'
 			],
 
+			// common dom methods
+			'dom methods': [
+				/(\.\binnerHTML|createElement|parentNode|innerHTML|(append|replace)Child)(?=[^\w])/g,
+				'<span class=js-dom>$1</span>'
+			],
+
+			// globals [window]
+
 			// basic types and special type checking keywords
 			'types': [
-				/\b(Array|String|Function|Object|Number|Date|Boolean|Error|RegExp|Math|null|undefined|true|false)/g, 
-				'<span class=js-type>$1</span>'
+				/([^\w])\b(Array|String|Function|Object|Number|Date|Boolean|Error|RegExp|Math|null|undefined|true|false)(?=[^\w])/g, 
+				'$1<span class=js-type>$2</span>'
 			],
 
 			// numeric values
@@ -156,7 +164,7 @@
 			'multiLineCom': [
 				/(\/\*(.|[\r\n])*\*\/)/g, 
 				'<span class=js-comment>$1</span>'
-			],
+			]
 		}
 	},
 
