added hasOwnProperty check during parsing language syntax

--- a/test/index.html
+++ b/test/index.html
@@ -62,6 +62,9 @@
 		if(maybePerson !== undefined) {
 			p.replace(/-666\w/g, '' + div + '');
 		}
+
+		console.log(me.hasOwnProperty('firstname'));
+		
 	})();
 </code>
 </pre>
