language properties are no longer highlighted inside of strings or comments

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
 			'age': 21
 		};
 
-		// person constructor
+		// person function constructor
 		function Person(fname, sname, age) {
 			this.firstname = fname;
 			this.surname = sname;
