added light theme to accent, users can now select their desired theme ('light' or 'dark')

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <pre>
-<code class="code">
+<code class="code-1">
 		
 	/**
 	 *	Accent.js - javascript test v0.1
@@ -60,7 +60,8 @@
 		hex = 0xFF;
 
 		if(maybePerson !== undefined) {
-			p.replace(/-666\w/g, '' + div + '');
+			var match = p.replace(/-666\w/g, '' + div + '');
+			document.innerHTML = match;
 		}
 
 		console.log(me.hasOwnProperty('firstname'));
@@ -68,8 +69,8 @@
 	})();
 </code>
 </pre>
-<div style="width:200px;">
-	<code class="code">
+<div>
+	<code class="code-2">
 	'use strict';
 
 	accent('code', 'javascript');
@@ -78,9 +79,10 @@
 <script src="./../accent.js"></script>
 <script>
 
-'use strict';
+	'use strict';
 
-accent('code', 'javascript');
+	accent('code-1', 'javascript', 'dark');
+	accent('code-2', 'javascript', 'light');
 
 </script>
 </body>
