screenshot of new 'light' theme

--- a/test/index.html
+++ b/test/index.html
@@ -81,7 +81,7 @@
 
 	'use strict';
 
-	accent('code-1', 'javascript', 'dark');
+	accent('code-1', 'javascript', 'light');
 	accent('code-2', 'javascript', 'light');
 
 </script>
