remove unused css property in accent, added custom theme example

--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Accent test</title>
 <link rel="stylesheet" href="./../accent.css">
+<link rel="stylesheet" href="custom.css">
 </head>
 <body>
 <pre>
@@ -81,8 +82,8 @@
 
 	'use strict';
 
-	accent('code-1', 'javascript', 'dark');
-	accent('code-2', 'javascript', 'light');
+	accent('code-1', 'javascript', 'custom');
+	accent('code-2', 'javascript', 'dark');
 
 </script>
 </body>
