added new theme 'muddy', minor refractoring, updated custom css test case

--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,9 @@
 	 *	Accent.js - javascript test v0.1
 	 **/
 	(function() {
+
+		'use strict';
+
 		var me = {
 			'firstname': 'John',
 			'surname': 'Strong',
@@ -83,7 +86,7 @@
 	'use strict';
 
 	accent('code-1', 'javascript', 'custom');
-	accent('code-2', 'javascript', 'dark');
+	accent('code-2', 'javascript', 'muddy');
 
 </script>
 </body>
